--- a/week01/W1D1/Part2/day2part2.ipynb
+++ b/week01/W1D1/Part2/day2part2.ipynb
@@ -150,10 +150,10 @@
     "\n",
     "# a = 1\n",
     "# b = 2\n",
-    "# c = add(a, b)\n",
-    "# x = 1\n",
-    "# y = 2\n",
-    "# z = x + y"
+    "# c = 3\n",
+    "# x = not defined, scoped to function\n",
+    "# y = not defined, scoped to function\n",
+    "# z = not defnied, scoped to funnction"
    ]
   }
  ],
