--- a/week01/W1D1/Part2/day2part2.ipynb
+++ b/week01/W1D1/Part2/day2part2.ipynb
@@ -153,7 +153,7 @@
     "# c = 3\n",
     "# x = not defined, scoped to function\n",
     "# y = not defined, scoped to function\n",
-    "# z = not defnied, scoped to funnction"
+    "# z = not defnied, scoped to function"
    ]
   }
  ],
