--- a/week01/W1D1/Part2/day2part2.ipynb
+++ b/week01/W1D1/Part2/day2part2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -54,13 +54,12 @@
     "# 2 c \n",
     "# 3 b \n",
     "# 4 a \n",
-    "rev_y = list(reversed(y))\n",
-    "print('\\n'.join(list(map(lambda a, b: str(a)+ ' ' +str(b), x, rev_y))))\n"
+    "print('\\n'.join(f\"{str(x[i])} {y[-i-1]}\" for i in range(len(x))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +158,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 64-bit",
+   "display_name": "Python 3.9.4 64-bit ('3.9.4')",
    "language": "python",
    "name": "python3"
   },
@@ -173,12 +172,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "1eb6f1a0e73120bf4ca114b19675917b4464009ef7f891281ba208f2fad8d4d2"
+    "hash": "d55ab33a75f288f91173c9f95a9333acd1087de306c13adcefb5f8c89f3eb0a2"
    }
   }
  },
