--- a/week01/W1D2/day2part1/Day2Part1.ipynb
+++ b/week01/W1D2/day2part1/Day2Part1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "10"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -105,16 +105,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Execution time: 5.0426 seconds\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<function __main__.multiply_a_lot.<locals>.wrapper(a_number)>"
+       "445120245179459485020000"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,29 +132,30 @@
     "from datetime import datetime\n",
     "# datetime.now() gives you the current time.\n",
     "\n",
+    "def timer_func(func):\n",
+    "    def wrap_func(arg):\n",
+    "        t1 = datetime.now()\n",
+    "        result = func(arg)\n",
+    "        t2 = datetime.now()\n",
+    "        elapsed = t2-t1\n",
+    "        print(f'Execution time: {round(elapsed.total_seconds(), 4)} seconds')\n",
+    "        return result\n",
+    "    return wrap_func\n",
+    "\n",
     "# Decorate this test function\n",
-    "def multiply_a_lot(func):\n",
-    "    def wrapper(a_number):\n",
-    "        sum = 0\n",
-    "        for i in range(a_number):\n",
-    "            sum = sum + i * i\n",
-    "        return sum\n",
-    "    return wrapper\n",
+    "@timer_func\n",
+    "def multiply_a_lot(a_number):\n",
+    "    sum = 0\n",
+    "    for i in range(a_number):\n",
+    "        sum = sum + i * i\n",
+    "    return sum\n",
     "\n",
-    "def set_time():\n",
-    "    print(datetime.now())\n",
-    "\n",
-    "multiply_a_lot(set_time)\n",
     "# Run the decorated multiply_a_lot function with larger and larger numbers.\n",
-    "# What is the number when the time taken is very close to 5 seconds? "
+    "multiply_a_lot(110120000)\n",
+    "\n",
+    "# What is the number when the time taken is very close to 5 seconds? \n",
+    "    #110120000"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
