--- a/week01/W1D2/Part2/Day2Part2.ipynb
+++ b/week01/W1D2/Part2/Day2Part2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -44,8 +44,8 @@
     "\n",
     "class Car(object):\n",
     "\tdef __init__(self, data):\n",
-    "\t\tfor k in data:\n",
-    "\t\t\tself.__setattr__(k, data[k])\n",
+    "\t\tfor k, v in data.items():\n",
+    "\t\t\tself.__setattr__(k, v)\n",
     "\t\t\tprint(f'{k}: {getattr(self, k)}')\n",
     "\n",
     "# Print out each Car objects attributes and the values after creation.\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "'starter-appended'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
