--- a/week01/W1D2/Part1/Day2Part1.ipynb
+++ b/week01/W1D2/Part1/Day2Part1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,17 @@
     "x = 1\n",
     "y = 2\n",
     "def f1(x):\n",
+    "    \"\"\"Wraps y in local scope and adds it to x. \n",
+    "\n",
+    "    Args:\n",
+    "        x (int): any integer\n",
+    "    \"\"\"\n",
     "    def f2(y):\n",
+    "        \"\"\"A wrapper function that takes y and adds it to x\n",
+    "\n",
+    "        Args:\n",
+    "            y (int): any integer\n",
+    "        \"\"\"\n",
     "        print(x + y)\n",
     "    return f2 \n",
     "\n",
@@ -105,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +143,20 @@
     "# datetime.now() gives you the current time.\n",
     "\n",
     "def timer_func(func):\n",
+    "    \"\"\"A decorator function that provides the time the function took to execute \n",
+    "\n",
+    "    Args:\n",
+    "        func (a function): any function to be times\n",
+    "    \"\"\"\n",
     "    def wrap_func(arg):\n",
+    "        \"\"\"Starts a timer at function start and returns the time elapsed once the function completes\n",
+    "\n",
+    "        Args:\n",
+    "            arg (a function): any function to be timed\n",
+    "\n",
+    "        Returns:\n",
+    "            datetime: a number of seconds\n",
+    "        \"\"\"\n",
     "        t1 = datetime.now()\n",
     "        result = func(arg)\n",
     "        t2 = datetime.now()\n",
@@ -145,6 +168,14 @@
     "# Decorate this test function\n",
     "@timer_func\n",
     "def multiply_a_lot(a_number):\n",
+    "    \"\"\"A function that multiplies a lot of numbers\n",
+    "\n",
+    "    Args:\n",
+    "        a_number (int): any integer value\n",
+    "\n",
+    "    Returns:\n",
+    "        integer: the number multiplied in the function\n",
+    "    \"\"\"\n",
     "    sum = 0\n",
     "    for i in range(a_number):\n",
     "        sum = sum + i * i\n",
@@ -156,11 +187,18 @@
     "# What is the number when the time taken is very close to 5 seconds? \n",
     "    #110120000"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.4 64-bit ('3.9.4')",
+   "display_name": "Python 3.10.8 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -174,12 +212,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d55ab33a75f288f91173c9f95a9333acd1087de306c13adcefb5f8c89f3eb0a2"
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
    }
   }
  },
