--- a/week01/W1D2/Part2/Day2Part2.ipynb
+++ b/week01/W1D2/Part2/Day2Part2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -43,6 +43,9 @@
     "# Create a generic dunder init method that will accept the dictionaries above and create the instance attributes. Your solution must be able to accomodate any future attributes which can be different than the ones above.\n",
     "\n",
     "class Car(object):\n",
+    "\t\"\"\"\n",
+    "\tCar class accepts dictionaries to create instance attributes. \n",
+    "\t\"\"\"\n",
     "\tdef __init__(self, data):\n",
     "\t\tfor k, v in data.items():\n",
     "\t\t\tself.__setattr__(k, v)\n",
@@ -55,12 +58,12 @@
     "print(\"\\ncar2 attributes and values\\n----\")\n",
     "car2 = Car(car2_attr)\n",
     "print(\"\\ncar3 attributes and values\\n----\")\n",
-    "car3 = Car(car3_attr)\n"
+    "car3 = Car(car3_attr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -118,13 +121,29 @@
     "\n",
     "class Employee:\n",
     "\tdef __init__(self, firstName, lastName):\n",
+    "\t\t\"\"\"Sets firstName and LastName\n",
+    "\n",
+    "\t\tArgs:\n",
+    "\t\t\tfirstName (string): first name\n",
+    "\t\t\tlastName (string): last name\n",
+    "\t\t\"\"\"\n",
     "\t\tself.firstName = firstName\n",
     "\t\tself.lastName = lastName\n",
     "\n",
     "\tdef fullName(self):\n",
+    "\t\t\"\"\"Capitalizes firstName and lastName and concatenates them to fullName. \n",
+    "\n",
+    "\t\tReturns:\n",
+    "\t\t\tstring: capitalize first and last name\n",
+    "\t\t\"\"\"\n",
     "\t\treturn f'{self.firstName.title()} {self.lastName.title()}'\n",
     "\n",
     "\tdef email(self):\n",
+    "\t\t\"\"\"Takes the employee's first and last names, sets them to lowercase, and generates a formatted email address. \n",
+    "\n",
+    "\t\tReturns:\n",
+    "\t\t\tString: firstname.lastname@acme.com\n",
+    "\t\t\"\"\"\n",
     "\t\treturn f'{self.firstName.lower()}.{self.lastName.lower()}@acme.com'\n",
     "\n",
     "a = Employee('Lynda', 'FOSTER')\n",
@@ -134,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -154,6 +173,14 @@
     "\n",
     "class MyString(str):\n",
     "\tdef append(self, input):\n",
+    "\t\t\"\"\"A class that inherits from the str class. \n",
+    "\n",
+    "\t\tArgs:\n",
+    "\t\t\tinput (string): any string of characters. \n",
+    "\n",
+    "\t\tReturns:\n",
+    "\t\t\tstring: Returns a string in which the input is appended to the end of another string. \n",
+    "\t\t\"\"\"\n",
     "\t\treturn self+input\n",
     "\n",
     "a = MyString(\"starter\")\n",
@@ -170,7 +197,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.4 64-bit ('3.9.4')",
+   "display_name": "Python 3.11.0 64-bit ('3.11.0')",
    "language": "python",
    "name": "python3"
   },
@@ -184,12 +211,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d55ab33a75f288f91173c9f95a9333acd1087de306c13adcefb5f8c89f3eb0a2"
+    "hash": "9280c93f09b02a8420ec99b809727ab41fb5f297b5db2fc963deb8608a665287"
    }
   }
  },
