--- a/week01/W1D2/Part2/Day2Part2.ipynb
+++ b/week01/W1D2/Part2/Day2Part2.ipynb
@@ -47,6 +47,11 @@
     "\tCar class accepts dictionaries to create instance attributes. \n",
     "\t\"\"\"\n",
     "\tdef __init__(self, data):\n",
+    "\t\t\"\"\"Takes a dictionary and creates instance attributes for the class. \n",
+    "\n",
+    "\t\tArgs:\n",
+    "\t\t\tdata (dicitonary): key and value pairs. \n",
+    "\t\t\"\"\"\n",
     "\t\tfor k, v in data.items():\n",
     "\t\t\tself.__setattr__(k, v)\n",
     "\t\t\tprint(f'{k}: {getattr(self, k)}')\n",
@@ -83,6 +88,8 @@
     "\tcounter = 0\n",
     "\n",
     "\tdef __init__(self):\n",
+    "\t\t\"\"\"Increments counter by 1 every time an instance of the EmployeeCount class is created. \n",
+    "\t\t\"\"\"\n",
     "\t\tEmployeeCount.counter += 1\n",
     "\n",
     "e1 = EmployeeCount()\n",
